--- a/src/All_pack/update_info.form
+++ b/src/All_pack/update_info.form
@@ -10,6 +10,9 @@
               <Image iconType="3" name="/icons/logo_border.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="File"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
